--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -43,18 +43,18 @@ spec:
     #   enabled: true
     #   service:
     #     loadBalancerIP: "${CILIUM_LB_IP}"
-    ingressController:
-      enabled: true
-      loadbalancerMode: shared
-      default: true
-      enforceHttps: true
-      defaultSecretName: "${DOMAIN/./-}-tls"
-      defaultSecretNamespace: ingress
-      service:
-        name: cilium-ingress
-        type: LoadBalancer
-        loadBalancerIP: "${CILIUM_LB_IP}"
-      gateway-api-secrets-namespace: "ingress"
+    # ingressController:
+    #   enabled: false
+    #   # loadbalancerMode: shared
+    #   # default: true
+    #   # enforceHttps: true
+    #   # defaultSecretName: "${DOMAIN/./-}-tls"
+    #   # defaultSecretNamespace: ingress
+    #   # service:
+    #   #   name: cilium-ingress
+    #   #   type: LoadBalancer
+    #   #   loadBalancerIP: "${CILIUM_LB_IP}"
+    #   # gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
       metrics:
