--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -78,6 +78,14 @@ spec:
             enabled: true
       ui:
         enabled: true
+        rollOutPods: true
+        ingress:
+          enabled: true
+          hosts:
+            - &host "hubble.${DOMAIN}"
+          tls:
+            - hosts:
+                - *host
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
