--- a/kubernetes/apps/media/immich/app/proxy/ingress.yaml
+++ b/kubernetes/apps/media/immich/app/proxy/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: immich
   namespace: media
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "immich.${DOMAIN}"
     http:
