--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/ingress.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rook
   namespace: monitoring
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "rook.${DOMAIN}"
     http:
