--- a/kubernetes/apps/monitoring/grafana/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: grafana
   namespace: monitoring
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "grafana.${DOMAIN}"
     http:
