--- a/kubernetes/apps/database/emqx/app/helmrelease.yaml
+++ b/kubernetes/apps/database/emqx/app/helmrelease.yaml
@@ -35,9 +35,8 @@ spec:
       EMQX_DASHBOARD__DEFAULT_USERNAME: admin
     service:
       type: LoadBalancer
-      loadBalancerIP:  ${EMQX_LB_IP}
-      # annotations:
-      #   io.cilium/lb-ipam-ips: ${EMQX_LB_IP}
+      annotations:
+        io.cilium/lb-ipam-ips: ${EMQX_LB_IP}
       externalTrafficPolicy: Cluster
     ingress:
       dashboard:
