add lldap env example

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,12 @@ SERVER_CIDR="192.168.0.0/24"
 IPAM_CIDR="192.168.0.224/27"
 DOCKER_PRIVATE_REGISTRY="xxxxxxxx"
 
+# lldap
+LLDAP_POSTGRES_SUPER_USER="postgres"
+LLDAP_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
+LLDAP_POSTGRES_USER="xxxxxxxx"
+LLDAP_POSTGRES_PASSWORD="xxxxxxxx"
+
 # nfs exports
 NFS_SERVER_IP="192.168.0.200"
 
