add lldap app deployment

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -287,6 +287,11 @@ tasks:
           LLDAP_POSTGRES_SUPER_PASSWORD="{{.LLDAP_POSTGRES_SUPER_PASSWORD}}"
           LLDAP_POSTGRES_USER="{{.LLDAP_POSTGRES_USER}}"
           LLDAP_POSTGRES_PASSWORD="{{.LLDAP_POSTGRES_PASSWORD}}"
+          LLDAP_JWT_SECRET="{{.LLDAP_JWT_SECRET}}"
+          LLDAP_USER_DN="{{.LLDAP_USER_DN}}"
+          LLDAP_LDAP_USER_EMAIL="{{.LLDAP_LDAP_USER_EMAIL}}"
+          LLDAP_SERVER_KEY_SEED="{{.LLDAP_SERVER_KEY_SEED}}"
+          LLDAP_LDAP_BASE_DN="{{.LLDAP_LDAP_BASE_DN}}"
       # volsync
       - vault kv put -mount=secret/{{.ENVIRONMENT}} volsync/volsync
           RESTIC_URL="{{.RESTIC_URL}}"
