--- a/kubernetes/apps/security/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/security/lldap/app/externalsecret.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -15,21 +14,13 @@ spec:
     template:
       engineVersion: v2
       data:
-        # App
         LLDAP_JWT_SECRET: "{{ .LLDAP_JWT_SECRET }}"
-        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_LDAP_USER_PASS }}"
+        LLDAP_LDAP_USER_PASS: "{{ .LLDAP_POSTGRES_PASSWORD }}"
         LLDAP_USER_DN: "{{ .LLDAP_USER_DN }}"
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
         LLDAP_SERVER_KEY_SEED: "{{ .LLDAP_SERVER_KEY_SEED }}"
-        LLDAP_DATABASE_URL: "postgres://{{ .POSTGRES_USER }}:{{ .POSTGRES_PASS }}@postgres-rw.database.svc.cluster.local/lldap"
-        # Postgres Init
-        INIT_POSTGRES_DBNAME: lldap
-        INIT_POSTGRES_HOST: postgres-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: "{{ .POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .POSTGRES_PASS }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        LLDAP_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
+        LLDAP_DATABASE_URL: "postgres://{{ .LLDAP_POSTGRES_USER }}:{{ .LLDAP_POSTGRES_PASSWORD }}@postgres-rw.security.svc.cluster.local/lldap"
   dataFrom:
     - extract:
-        key: lldap
-    - extract:
-        key: cloudnative-pg
+        key: /security/lldap
