--- a/kubernetes/apps/security/lldap/app/externalsecret.yaml
+++ b/kubernetes/apps/security/lldap/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         LLDAP_LDAP_USER_EMAIL: "{{ .LLDAP_LDAP_USER_EMAIL }}"
         LLDAP_SERVER_KEY_SEED: "{{ .LLDAP_SERVER_KEY_SEED }}"
         LLDAP_LDAP_BASE_DN: "{{ .LLDAP_LDAP_BASE_DN }}"
-        LLDAP_DATABASE_URL: "postgres://{{ .LLDAP_POSTGRES_USER }}:{{ .LLDAP_POSTGRES_PASSWORD }}@postgres-rw.security.svc.cluster.local/lldap"
+        LLDAP_DATABASE_URL: "postgres://{{ .LLDAP_POSTGRES_USER }}:{{ .LLDAP_POSTGRES_PASSWORD }}@lldap-rw.security.svc.cluster.local/lldap"
   dataFrom:
     - extract:
         key: /security/lldap
