--- a/kubernetes/apps/security/kustomization.yaml
+++ b/kubernetes/apps/security/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./lldap/ks.yaml
-  # - ./dex/ks.yaml
+  - ./dex/ks.yaml
   # - ./dex-k8s-authenticator/ks.yaml
   
   # - ./oauth2-proxy/ks.yaml
