--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./cloudnative-pg.yaml
   - ./coredns.yaml
   - ./descheduler.yaml
+  - ./dex.yaml
   - ./emqx.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
