--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -205,6 +205,10 @@ tasks:
       # cert-manager
       - vault kv put -mount=secret/{{.ENVIRONMENT}} cert-manager/cloudflare          
           CLOUDFLARE_TOKEN="{{.CLOUDFLARE_TOKEN}}"
+      # dex
+      - vault kv put -mount=secret/{{.ENVIRONMENT}} security/dex
+          DEX_OAUTH2_CLIENT_SECRET="{{.DEX_OAUTH2_CLIENT_SECRET}}"
+          DEX_K8S_AUTHENTICATOR_CLIENT_SECRET="{{.DEX_K8S_AUTHENTICATOR_CLIENT_SECRET}}"
       # flux-system
       - vault kv put -mount=secret/{{.ENVIRONMENT}} flux-system/notification
           FLUX_SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
