--- a/kubernetes/apps/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/security/dex/app/externalsecret.yaml
@@ -38,23 +38,23 @@ spec:
                     userAttr: uid
                     groupAttr: memberUid
                     nameAttr: cn
-            # staticClients:
-            #   - id: oauth2-proxy
-            #     name: oauth2-proxy
-            #     secret: "{{.OAUTH2_CLIENT_SECRET}}"
-            #     redirectURIs:
-            #       - "https://alertmanager.${DOMAIN}/oauth2/callback"
-            #       - "https://esphome.${DOMAIN}/oauth2/callback"
-            #       - "https://hubble.${DOMAIN}/oauth2/callback"
-            #       - "https://hass-code.${DOMAIN}/oauth2/callback"
-            #       - "https://thanos.${DOMAIN}/oauth2/callback"
-            #       - "https://zwavejs.${DOMAIN}/oauth2/callback"
-            #       - "https://cctv.${DOMAIN}/oauth2/callback"
-            #   - id: dex-k8s-authenticator
-            #     name: dex-k8s-authenticator
-            #     secret: "{{.DEX_K8S_AUTHENTICATOR_CLIENT_SECRET}}"
-            #     redirectURIs:
-            #       - "https://login.${DOMAIN}/callback/"
+            staticClients:
+              - id: oauth2-proxy
+                name: oauth2-proxy
+                secret: "{{.DEX_OAUTH2_CLIENT_SECRET}}"
+                redirectURIs:
+                  - "https://alertmanager.${DOMAIN}/oauth2/callback"
+                  - "https://esphome.${DOMAIN}/oauth2/callback"
+                  - "https://hubble.${DOMAIN}/oauth2/callback"
+                  - "https://hass-code.${DOMAIN}/oauth2/callback"
+                  - "https://thanos.${DOMAIN}/oauth2/callback"
+                  - "https://zwavejs.${DOMAIN}/oauth2/callback"
+                  - "https://cctv.${DOMAIN}/oauth2/callback"
+              - id: dex-k8s-authenticator
+                name: dex-k8s-authenticator
+                secret: "{{.DEX_K8S_AUTHENTICATOR_CLIENT_SECRET}}"
+                redirectURIs:
+                  - "https://login.${DOMAIN}/callback/"
   dataFrom:
     - extract:
         key: /security/lldap
