--- a/kubernetes/apps/security/kustomization.yaml
+++ b/kubernetes/apps/security/kustomization.yaml
@@ -9,5 +9,4 @@ resources:
   # Flux-Kustomizations
   - ./lldap/ks.yaml
   - ./dex/ks.yaml
-  - ./dex-k8s-authenticator/ks.yaml
-  # - ./oauth2-proxy/ks.yaml
+  - ./oauth2-proxy/ks.yaml
