--- a/kubernetes/apps/security/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/security/oauth2-proxy/app/externalsecret.yaml
@@ -18,6 +18,6 @@ spec:
         client-id: "oauth2-proxy"
         client-secret: "{{.DEX_OAUTH2_CLIENT_SECRET}}"
         cookie-secret: "{{.DEX_OAUTH2_COOKIE_SECRET}}"
-  data:
+  dataFrom:
     - extract:
         key: /security/dex
