--- a/kubernetes/apps/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/security/oauth2-proxy/app/helmrelease.yaml
@@ -39,10 +39,7 @@ spec:
     ingress:
       enabled: true
       hosts:
-        - host: &host "oauth.${DOMAIN}"
-          paths:
-            - path: /
-              pathType: Prefix
+        - &host "oauth.${DOMAIN}"
       tls:
         - hosts:
             - *host
