--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -90,8 +90,8 @@ spec:
             nginx.ingress.kubernetes.io/ssl-redirect: "false"
             nginx.ingress.kubernetes.io/use-regex: "true"
             nginx.ingress.kubernetes.io/rewrite-target: /$1
-            nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-            nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
+            nginx.ingress.kubernetes.io/auth-url: "https://dex.${DOMAIN}/oauth2/auth"
+            nginx.ingress.kubernetes.io/auth-signin: "https://dex.${DOMAIN}/oauth2/start?rd=$escaped_request_uri"
             nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, X-Auth-Request-Email, X-Auth-Request-User, X-Forwarded-Access-Token"
     ipam:
       mode: kubernetes
