--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -87,8 +87,8 @@ spec:
             - hosts:
                 - *host
           annotations:
-            nginx.ingress.kubernetes.io/auth-url: "https://dex.${DOMAIN}/oauth2/auth"
-            nginx.ingress.kubernetes.io/auth-signin: "https://dex.${DOMAIN}/oauth2/start?rd=$escaped_request_uri"
+            nginx.ingress.kubernetes.io/auth-url: "https://oauth.${DOMAIN}/oauth2/auth"
+            nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${DOMAIN}/oauth2/start?rd=$escaped_request_uri"
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
