--- a/kubernetes/apps/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/security/dex/app/externalsecret.yaml
@@ -23,8 +23,8 @@ spec:
                 name: LDAP
                 config:
                   host: "lldap:389"
-                  bindDN: "uid=admin,cn=users,{{.LLDAP_LDAP_BASE_DN}}"
-                  bindPW: "{{.LLDAP_POSTGRES_PASSWORD}}"
+                  bindDN: "uid={{.DEX_LLDAP_USER}},cn=users,{{.LLDAP_LDAP_BASE_DN}}"
+                  bindPW: "{{.DEX_LLDAP_PASSWORD}}"
                   userSearch:
                     baseDN: "cn=users,{{.LLDAP_LDAP_BASE_DN}}"
                     filter: "(objectClass=person)"
