--- a/kubernetes/apps/home-automation/home-assistant/database/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/database/externalsecret.yaml
@@ -24,6 +24,14 @@ spec:
       remoteRef:
         key: /home-automation/home-assistant
         property: HASS_POSTGRES_SUPER_PASSWORD
+    - secretKey: access-key
+      remoteRef:
+        key: /home-automation/home-assistant
+        property: HASS_DB_BACKUP_ACCESS_KEY
+    - secretKey: secret
+      remoteRef:
+        key: /home-automation/home-assistant
+        property: HASS_DB_BACKUP_SECRET
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
