--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -237,6 +237,8 @@ tasks:
           HASS_POSTGRES_SUPER_PASSWORD="{{.HASS_POSTGRES_SUPER_PASSWORD}}"
           HASS_POSTGRES_USER="{{.HASS_POSTGRES_USER}}"
           HASS_POSTGRES_PASSWORD="{{.HASS_POSTGRES_PASSWORD}}"
+          HASS_DB_BACKUP_ACCESS_KEY="{{.HASS_DB_BACKUP_ACCESS_KEY}}"
+          HASS_DB_BACKUP_SECRET="{{.HASS_DB_BACKUP_SECRET}}"
           ALARM_CODE="{{.HASS_ALARM_CODE}}"
           GIT_REPO="{{.HASS_GIT_REPO}}"
           DEPLOY_KEY_B64="{{.HASS_DEPLOY_KEY_B64}}"
