--- a/kubernetes/apps/media/immich/database/externalsecret.yaml
+++ b/kubernetes/apps/media/immich/database/externalsecret.yaml
@@ -24,6 +24,14 @@ spec:
       remoteRef:
         key: /media/immich
         property: IMMICH_POSTGRES_SUPER_PASSWORD
+    - secretKey: access-key
+      remoteRef:
+        key: /media/immich
+        property: IMMICH_DB_BACKUP_ACCESS_KEY
+    - secretKey: secret
+      remoteRef:
+        key: /media/immich
+        property: IMMICH_DB_BACKUP_SECRET
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
