add lldap db backup

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -297,6 +297,8 @@ tasks:
           LLDAP_POSTGRES_SUPER_PASSWORD="{{.LLDAP_POSTGRES_SUPER_PASSWORD}}"
           LLDAP_POSTGRES_USER="{{.LLDAP_POSTGRES_USER}}"
           LLDAP_POSTGRES_PASSWORD="{{.LLDAP_POSTGRES_PASSWORD}}"
+          LLDAP_DB_BACKUP_ACCESS_KEY="{{.LLDAP_DB_BACKUP_ACCESS_KEY}}"
+          LLDAP_DB_BACKUP_SECRET="{{.LLDAP_DB_BACKUP_SECRET}}"
           LLDAP_JWT_SECRET="{{.LLDAP_JWT_SECRET}}"
           LLDAP_USER_DN="{{.LLDAP_USER_DN}}"
           LLDAP_LDAP_USER_EMAIL="{{.LLDAP_LDAP_USER_EMAIL}}"
