--- a/kubernetes/apps/security/lldap/database/externalsecret.yaml
+++ b/kubernetes/apps/security/lldap/database/externalsecret.yaml
@@ -24,6 +24,14 @@ spec:
       remoteRef:
         key: /security/lldap
         property: LLDAP_POSTGRES_SUPER_PASSWORD
+    - secretKey: access-key
+      remoteRef:
+        key: /security/lldap
+        property: LLDAP_DB_BACKUP_ACCESS_KEY
+    - secretKey: secret
+      remoteRef:
+        key: /security/lldap
+        property: LLDAP_DB_BACKUP_SECRET
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
