--- a/kubernetes/apps/media/immich/database/cluster.yaml
+++ b/kubernetes/apps/media/immich/database/cluster.yaml
@@ -14,11 +14,8 @@ spec:
       kube-image-keeper.enix.io/image-caching-policy: ignore
   primaryUpdateStrategy: unsupervised
   bootstrap:
-    initdb:
-      database: immich
-      owner: immich
-      secret:
-        name: immich-database-user
+    recovery:
+      source: &previousCluster immich-1
   storage:
     size: 5Gi
     storageClass: local-path
@@ -38,7 +35,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://db-backup/immich
       endpointURL: "https://minio.${LOCAL_DOMAIN}"
-      serverName: immich-1
+      serverName: &currentCluster immich-2
       s3Credentials:
         accessKeyId:
           name: immich-database-superuser
@@ -47,7 +44,7 @@ spec:
           name: immich-database-superuser
           key: secret
   externalClusters:
-  - name: immich-1
+  - name: *previousCluster
     barmanObjectStore:
       destinationPath: s3://db-backup/immich
       endpointURL: "https://minio.${LOCAL_DOMAIN}"
