add authelia app

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -291,6 +291,14 @@ tasks:
           LDAP_USERNAME="{{.GRAFANA_LDAP_USERNAME}}"
           LDAP_PASSWORD="{{.GRAFANA_LDAP_PASSWORD}}"
           LDAP_ROOT="{{.GRAFANA_LDAP_ROOT}}"
+      # security/authelia
+      - vault kv put -mount=secret/{{.ENVIRONMENT}} security/authelia
+          AUTHELIA_POSTGRES_SUPER_USER="{{.AUTHELIA_POSTGRES_SUPER_USER}}"
+          AUTHELIA_POSTGRES_SUPER_PASSWORD="{{.AUTHELIA_POSTGRES_SUPER_PASSWORD}}"
+          AUTHELIA_POSTGRES_USER="{{.AUTHELIA_POSTGRES_USER}}"
+          AUTHELIA_POSTGRES_PASSWORD="{{.AUTHELIA_POSTGRES_PASSWORD}}"
+          AUTHELIA_DB_BACKUP_ACCESS_KEY="{{.AUTHELIA_DB_BACKUP_ACCESS_KEY}}"
+          AUTHELIA_DB_BACKUP_SECRET="{{.AUTHELIA_DB_BACKUP_SECRET}}"
       # security/lldap
       - vault kv put -mount=secret/{{.ENVIRONMENT}} security/lldap
           LLDAP_POSTGRES_SUPER_USER="{{.LLDAP_POSTGRES_SUPER_USER}}"
