--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -6,12 +6,12 @@ metadata:
   name: authelia
   namespace: default
 spec:
+  refreshInterval: "30m"
   secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
+    name: vault-kv-backend
+    kind: SecretStore
   target:
     name: authelia-secret
-    creationPolicy: Owner
     template:
       engineVersion: v2
       data:
@@ -31,16 +31,8 @@ spec:
         MINIFLUX_OAUTH_CLIENT_SECRET: "{{ .MINIFLUX_OAUTH_CLIENT_SECRET }}"
         WEAVEGITOPS_OAUTH_CLIENT_SECRET: "{{ .WEAVEGITOPS_OAUTH_CLIENT_SECRET }}"
         GITEA_OAUTH_CLIENT_SECRET: "{{ .GITEA_OAUTH_CLIENT_SECRET }}"
-        # Postgres Init
-        INIT_POSTGRES_DBNAME: *dbName
-        INIT_POSTGRES_HOST: *dbHost
-        INIT_POSTGRES_USER: *dbUser
-        INIT_POSTGRES_PASS: *dbPass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: authelia
+        key: /security/authelia
     - extract:
-        key: cloudnative-pg
-    - extract:
-        key: lldap
+        key: /security/lldap
