--- a/kubernetes/apps/security/authelia/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authelia/app/externalsecret.yaml
@@ -1,10 +1,9 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: authelia
-  namespace: default
+  namespace: security
 spec:
   refreshInterval: "30m"
   secretStoreRef:
@@ -16,21 +15,20 @@ spec:
       engineVersion: v2
       data:
         # App
-        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: "{{ .LLDAP_LDAP_USER_PASS }}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: "{{.LLDAP_LDAP_BASE_DN}}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: "uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
+        AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: "{{ .LLDAP_POSTGRES_PASSWORD }}"
         AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET: "{{ .AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET }}"
         AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY: "{{ .AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY }}"
         AUTHELIA_JWT_SECRET: "{{ .AUTHELIA_JWT_SECRET }}"
         AUTHELIA_SESSION_SECRET: "{{ .AUTHELIA_SESSION_SECRET }}"
         AUTHELIA_STORAGE_ENCRYPTION_KEY: "{{ .AUTHELIA_STORAGE_ENCRYPTION_KEY }}"
         AUTHELIA_STORAGE_POSTGRES_DATABASE: &dbName authelia
-        AUTHELIA_STORAGE_POSTGRES_HOST: &dbHost postgres-rw.database.svc.cluster.local
-        AUTHELIA_STORAGE_POSTGRES_USERNAME: &dbUser "{{ .AUTHELIA_STORAGE_POSTGRES_USERNAME }}"
-        AUTHELIA_STORAGE_POSTGRES_PASSWORD: &dbPass "{{ .AUTHELIA_STORAGE_POSTGRES_PASSWORD }}"
-        GRAFANA_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
-        IMMICH_OAUTH_CLIENT_SECRET: "{{ .IMMICH_OAUTH_CLIENT_SECRET }}"
-        MINIFLUX_OAUTH_CLIENT_SECRET: "{{ .MINIFLUX_OAUTH_CLIENT_SECRET }}"
-        WEAVEGITOPS_OAUTH_CLIENT_SECRET: "{{ .WEAVEGITOPS_OAUTH_CLIENT_SECRET }}"
-        GITEA_OAUTH_CLIENT_SECRET: "{{ .GITEA_OAUTH_CLIENT_SECRET }}"
+        AUTHELIA_STORAGE_POSTGRES_HOST: &dbHost authelia-rw.security.svc.cluster.local
+        AUTHELIA_STORAGE_POSTGRES_USERNAME: &dbUser "{{ .AUTHELIA_POSTGRES_USER }}"
+        AUTHELIA_STORAGE_POSTGRES_PASSWORD: &dbPass "{{ .AUTHELIA_POSTGRES_PASSWORD }}"        
+        GRAFANA_OAUTH_CLIENT_SECRET: "{{ .AUTHELIA_GRAFANA_OAUTH_CLIENT_SECRET }}"
+        IMMICH_OAUTH_CLIENT_SECRET: "{{ .AUTHELIA_IMMICH_OAUTH_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: /security/authelia
