--- a/kubernetes/apps/security/authelia/app/config/configuration.yaml
+++ b/kubernetes/apps/security/authelia/app/config/configuration.yaml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://gist.githubusercontent.com/james-d-elliott/756de37a4398b3445072a60d674905c6/raw/ce90833b1ce145cb701184557dd964fa7546f19a/jsonschema.json
 ---
 session:
   redis:
@@ -17,22 +16,6 @@ access_control:
   networks:
     - name: internal
       networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
-  rules:
-    - domain: ["jellyfin.devbu.io"]
-      resources: ["^/metrics.*$"]
-      policy: deny
-    - domain: ["letsblockit.devbu.io"]
-      resources: ["^/lists.*$"]
-      policy: bypass
-    - domain: ["navidrome.devbu.io"]
-      resources: ["^/ping.*$", "^/rest.*$"]
-      policy: bypass
-    - domain: ["navidrome.devbu.io"]
-      resources: ["^/metrics.*$"]
-      policy: deny
-    - domain: ["wizarr.devbu.io"]
-      resources: ["^/join.*$", "^/j/.*$", "^/setup.*$", "^/static/.*$"]
-      policy: bypass
 
 identity_providers:
   oidc:
@@ -42,28 +25,28 @@ identity_providers:
     clients:
       - id: grafana
         description: Grafana
-        secret: "${GRAFANA_OAUTH_CLIENT_SECRET}"
+        secret: "${AUTHELIA_GRAFANA_OAUTH_CLIENT_SECRET}"
         public: false
         authorization_policy: two_factor
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "groups", "email"]
-        redirect_uris: ["https://grafana.devbu.io/login/generic_oauth"]
+        redirect_uris: ["https://grafana.${DOMAIN}/login/generic_oauth"]
         userinfo_signing_algorithm: none
       - id: immich
         description: Immich
-        secret: "${IMMICH_OAUTH_CLIENT_SECRET}"
+        secret: "${AUTHELIA_IMMICH_OAUTH_CLIENT_SECRET}"
         public: false
         authorization_policy: two_factor
         pre_configured_consent_duration: 1y
         scopes: ["openid", "profile", "email"]
-        redirect_uris: ["https://photos.devbu.io/auth/login", "app.immich:/"]
+        redirect_uris: ["https://immich.${DOMAIN}/auth/login", "app.immich:/"]
         userinfo_signing_algorithm: none
-      - id: miniflux
-        description: Miniflux
-        secret: "${MINIFLUX_OAUTH_CLIENT_SECRET}"
-        public: false
-        authorization_policy: two_factor
-        pre_configured_consent_duration: 1y
-        scopes: ["openid", "profile", "groups", "email"]
-        redirect_uris: ["https://miniflux.devbu.io/oauth2/oidc/callback"]
-        userinfo_signing_algorithm: none
+      # - id: miniflux
+      #   description: Miniflux
+      #   secret: "${MINIFLUX_OAUTH_CLIENT_SECRET}"
+      #   public: false
+      #   authorization_policy: two_factor
+      #   pre_configured_consent_duration: 1y
+      #   scopes: ["openid", "profile", "groups", "email"]
+      #   redirect_uris: ["https://miniflux.${DOMAIN}/oauth2/oidc/callback"]
+      #   userinfo_signing_algorithm: none
