--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -299,6 +299,12 @@ tasks:
           AUTHELIA_POSTGRES_PASSWORD="{{.AUTHELIA_POSTGRES_PASSWORD}}"
           AUTHELIA_DB_BACKUP_ACCESS_KEY="{{.AUTHELIA_DB_BACKUP_ACCESS_KEY}}"
           AUTHELIA_DB_BACKUP_SECRET="{{.AUTHELIA_DB_BACKUP_SECRET}}"
+          AUTHELIA_JWT_SECRET="{{.AUTHELIA_JWT_SECRET}}"
+          AUTHELIA_SESSION_SECRET="{{.AUTHELIA_SESSION_SECRET}}"
+          AUTHELIA_STORAGE_ENCRYPTION_KEY="{{.AUTHELIA_STORAGE_ENCRYPTION_KEY}}"
+          AUTHELIA_JWT_SECRET="{{.AUTHELIA_JWT_SECRET}}"
+          AUTHELIA_GRAFANA_OAUTH_CLIENT_SECRET="{{.AUTHELIA_GRAFANA_OAUTH_CLIENT_SECRET}}"
+          AUTHELIA_IMMICH_OAUTH_CLIENT_SECRET="{{.AUTHELIA_IMMICH_OAUTH_CLIENT_SECRET}}"
       # security/lldap
       - vault kv put -mount=secret/{{.ENVIRONMENT}} security/lldap
           LLDAP_POSTGRES_SUPER_USER="{{.LLDAP_POSTGRES_SUPER_USER}}"
