--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -71,7 +71,9 @@ spec:
       AUTHELIA_THEME: dark
       AUTHELIA_TOTP_ISSUER: authelia.com
       AUTHELIA_WEBAUTHN_DISABLE: "true"
-    envFrom: *envFrom
+    envFrom:
+      - secretRef:
+          name: authelia-secret
     enableServiceLinks: false
     service:
       main:
