--- a/kubernetes/apps/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/externalsecret.yaml
@@ -1,17 +1,16 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/external-secrets.io/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: weave-gitops
   namespace: flux-system
 spec:
+  refreshInterval: "30m"
   secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
+    name: vault-kv-backend
+    kind: SecretStore
   target:
-    name: cluster-user-auth # weave-gitops expects this name
-    creationPolicy: Owner
+    name: cluster-user-auth
     template:
       engineVersion: v2
       data:
@@ -19,4 +18,4 @@ spec:
         password: "{{ .ADMIN_PASSWORD }}"
   dataFrom:
     - extract:
-        key: weave-gitops
+        key: /flux-system/weave-gitops
