--- a/kubernetes/apps/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/helmrelease.yaml
@@ -1,5 +1,4 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -32,10 +31,9 @@ spec:
       createSecret: false
       username: admin
     ingress:
-      enabled: true
-      className: internal
+      enabled: true      
       hosts:
-        - host: &host gitops.devbu.io
+        - host: &host "gitops.${DOMAIN}"
           paths:
             - path: /
               pathType: Prefix
