--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -236,6 +236,14 @@ tasks:
           IMMICH_POSTGRES_PASSWORD="{{.IMMICH_POSTGRES_PASSWORD}}"
           IMMICH_DB_BACKUP_ACCESS_KEY="{{.IMMICH_DB_BACKUP_ACCESS_KEY}}"
           IMMICH_DB_BACKUP_SECRET="{{.IMMICH_DB_BACKUP_SECRET}}"
+      # media/miniflux
+      - vault kv put -mount=secret/{{.ENVIRONMENT}} media/miniflux
+          MINIFLUX_POSTGRES_SUPER_USER="{{.MINIFLUX_POSTGRES_SUPER_USER}}"
+          MINIFLUX_POSTGRES_SUPER_PASSWORD="{{.MINIFLUX_POSTGRES_SUPER_PASSWORD}}"
+          MINIFLUX_POSTGRES_USER="{{.MINIFLUX_POSTGRES_USER}}"
+          MINIFLUX_POSTGRES_PASSWORD="{{.MINIFLUX_POSTGRES_PASSWORD}}"
+          MINIFLUX_DB_BACKUP_ACCESS_KEY="{{.MINIFLUX_DB_BACKUP_ACCESS_KEY}}"
+          MINIFLUX_DB_BACKUP_SECRET="{{.MINIFLUX_DB_BACKUP_SECRET}}"
       # home-automation/home-assistant
       - vault kv put -mount=secret/{{.ENVIRONMENT}} home-automation/home-assistant
           HASS_POSTGRES_SUPER_USER="{{.HASS_POSTGRES_SUPER_USER}}"
