--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -238,6 +238,8 @@ tasks:
           IMMICH_DB_BACKUP_SECRET="{{.IMMICH_DB_BACKUP_SECRET}}"
       # media/miniflux
       - vault kv put -mount=secret/{{.ENVIRONMENT}} media/miniflux
+          MINIFLUX_ADMIN_USERNAME="{{.MINIFLUX_ADMIN_USERNAME}}"
+          MINIFLUX_ADMIN_PASSWORD="{{.MINIFLUX_ADMIN_PASSWORD}}"
           MINIFLUX_POSTGRES_SUPER_USER="{{.MINIFLUX_POSTGRES_SUPER_USER}}"
           MINIFLUX_POSTGRES_SUPER_PASSWORD="{{.MINIFLUX_POSTGRES_SUPER_PASSWORD}}"
           MINIFLUX_POSTGRES_USER="{{.MINIFLUX_POSTGRES_USER}}"
