--- a/kubernetes/apps/media/miniflux/app/helmrelease.yaml
+++ b/kubernetes/apps/media/miniflux/app/helmrelease.yaml
@@ -1,10 +1,9 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: &app miniflux
-  namespace: default
+  namespace: media
 spec:
   interval: 30m
   chart:
@@ -35,7 +34,7 @@ spec:
           - secretRef:
               name: miniflux-secret
     controller:
-      replicas: 2
+      replicas: 1
       strategy: RollingUpdate
       annotations:
         reloader.stakater.com/auto: "true"
@@ -43,17 +42,12 @@ spec:
       repository: ghcr.io/miniflux/miniflux
       tag: 2.0.45
     env:
-      BASE_URL: https://miniflux.devbu.io
+      BASE_URL: "https://miniflux.${DOMAIN}"
       CREATE_ADMIN: "1"
       DEBUG: "1"
       LOG_DATE_TIME: "1"
       METRICS_ALLOWED_NETWORKS: "10.32.0.0/16"
       METRICS_COLLECTOR: "1"
-      OAUTH2_CLIENT_ID: miniflux
-      OAUTH2_USER_CREATION: "1"
-      OAUTH2_OIDC_DISCOVERY_ENDPOINT: https://auth.devbu.io
-      OAUTH2_PROVIDER: oidc
-      OAUTH2_REDIRECT_URL: https://miniflux.devbu.io/oauth2/oidc/callback
       POLLING_SCHEDULER: entry_frequency
       POLLING_FREQUENCY: "15"
       RUN_MIGRATIONS: "1"
@@ -69,11 +63,8 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: external
-        annotations:
-          external-dns.alpha.kubernetes.io/target: external.devbu.io
         hosts:
-          - host: &host "{{ .Release.Name }}.devbu.io"
+          - host: &host "{{ .Release.Name }}.${DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
