--- a/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/externalsecret.yaml
@@ -50,10 +50,10 @@ spec:
           database:
             path: /data/frigate.db
 
-          # detectors:
-          #   coral:
-          #     type: edgetpu
-          #     device: usb
+          detectors:
+            coral:
+              type: edgetpu
+              device: pci
 
           objects:
             track:
