--- a/kubernetes/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/rules/kustomization.yaml
@@ -4,5 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./aeotec-zwave-device.yaml
-  - ./google-coral-device.yaml
+  - ./google-coral-usb-device.yaml
+  - ./google-coral-pci-device.yaml
   - ./skyconnect-device.yaml
